Fixes to the index.js, swagger output as well.
